--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -2,10 +2,32 @@ body {
     padding-top: 5rem;
 }
 
-.contactForm .label {
+label {
     font-weight: 900;
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+input {
+    color: gray;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+#message{
+    height: 150px;
 }
 
 strong {
     color: red;
+}
+
+button {
+    width: 80px;
+    height: 30px;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    background-color: green;
 }
